# school-billing-api

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  PLAN.md  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2797dcc56267_add_soft_delete_support.py  2aa5c1fc7f9e_make_student_email_and_enrollment_date_.py  a2db66ae9368_remove_address_fields.py  c2fb10ee5d1a_add_users_table.py  e48c2c0b9fed_use_partial_indexes_for_statement_.py  f132d60f44f3_add_indexes_for_statement_queries.py  fa56cf543ee7_initial_migration.py
app/: main.py
app/core/: auth.py  config.py  metrics.py  security.py
app/models/: __init__.py  invoice.py  invoice_item.py  payment.py  school.py  student.py  user.py
app/routes/: __init__.py  auth.py  invoices.py  schools.py  students.py
app/schemas/: __init__.py  account_statement.py  invoice.py  payment.py  school.py  student.py  user.py
app/services/: account_statement_service.py  invoice_service.py  payment_service.py  school_service.py  student_service.py  (+3 more)
tests/: conftest.py  factories.py  test_account_statement_service.py  test_account_statements_e2e.py  test_auth_e2e.py  test_invoice_service.py  test_invoices_e2e.py  test_payment_service.py  test_payments_e2e.py  test_role_based_access.py  test_school_service.py  test_school_statement_service.py  test_school_statements_e2e.py  test_schools_e2e.py  test_student_service.py  test_student_statement_service.py  test_student_statements_e2e.py  test_students_e2e.py  test_user_service.py
